syntax = "proto3";

package storage;

import "google/protobuf/timestamp.proto";
import "storage/cve.proto";

// TODO (ROX-30352): Review this whole proto for GA readiness.  Lots of copypasta.
message VirtualMachine {
  string id = 1; // @gotags: sql:"pk,type(uuid)"
  string namespace = 2; // @gotags: search:"Namespace,store"
  string name = 3;
  string cluster_id = 4; // @gotags: search:"Cluster ID,hidden,store"  sql:"type(uuid)"
  string cluster_name = 5;
  map<string, string> facts = 6;

  VirtualMachineScan scan = 7;

  google.protobuf.Timestamp last_updated = 8;

  enum Note {
    MISSING_METADATA = 0;
    MISSING_SCAN_DATA = 1;
    MISSING_SIGNATURE = 2;
    MISSING_SIGNATURE_VERIFICATION_DATA = 3;
  }
  repeated Note notes = 9;

  int32 vsock_cid = 10;
  enum State {
    UNKNOWN = 0;
    STOPPED = 1;
    RUNNING = 2;
  }
  State state = 11;
}

// TODO: Consider cleaning this up. It doesn't have to perfectly match the image scan message.
message VirtualMachineScan {
  string scanner_version = 1;
  google.protobuf.Timestamp scan_time = 2;
  // TODO (ROX-30352): We need to think hard about reusing EmbeddedImageScanComponent.  May need to use a new proto from scratch.
  repeated EmbeddedVirtualMachineScanComponent components = 3;
  string operating_system = 4;
  // DataSource contains information about which integration was used to scan the image
  message DataSource {
    string id = 1;
    string name = 2;
    string mirror = 3;
  }
  DataSource data_source = 5;
  enum Note {
    UNSET = 0;
    OS_UNAVAILABLE = 1;
    PARTIAL_SCAN_DATA = 2;
    OS_CVES_UNAVAILABLE = 3;
    OS_CVES_STALE = 4;
    LANGUAGE_CVES_UNAVAILABLE = 5;
    CERTIFIED_RHEL_SCAN_UNAVAILABLE = 6;
  }
  repeated Note notes = 6;
}

// Next Tag: 14
message EmbeddedVirtualMachineScanComponent {
  string name = 1;
  string version = 2;
  message License {
    string name = 1;
    string type = 2;
    string url = 3;
  }
  License license = 3;
  repeated EmbeddedVirtualMachineVulnerability vulns = 4; // @gotags: hash:"set"
  oneof has_layer_index {
    int32 layer_index = 5;
  }
  int64 priority = 6; // @gotags: hash:"ignore"
  enum SourceType {
    OS = 0;
    PYTHON = 1;
    JAVA = 2;
    RUBY = 3;
    NODEJS = 4;
    GO = 7;
    DOTNETCORERUNTIME = 5;
    INFRASTRUCTURE = 6;
  }
  SourceType source = 7;
  string location = 8;
  oneof set_top_cvss {
    float top_cvss = 9;
  }
  float risk_score = 10; // @gotags: hash:"ignore"
  // Component version that fixes all the fixable vulnerabilities in this component.
  string fixed_by = 11;
  message Executable {
    string path = 1;
    repeated string dependencies = 2;
  }
  // Values are cleared after moving to cache, remove them from the grpc return as well
  repeated Executable executables = 12; // @gotags: json:"-"
  string architecture = 13;
}

// Next Tag: 25
message EmbeddedVirtualMachineVulnerability {
  // ScoreVersion can be deprecated ROX-26066
  enum ScoreVersion {
    V2 = 0; // No unset for automatic backwards compatibility
    V3 = 1;
  }

  enum VulnerabilityType {
    UNKNOWN_VULNERABILITY = 0;
    IMAGE_VULNERABILITY = 1;
    K8S_VULNERABILITY = 2;
    ISTIO_VULNERABILITY = 3;
    NODE_VULNERABILITY = 4;
    OPENSHIFT_VULNERABILITY = 5;
  }

  string cve = 1;
  message Advisory {
    string name = 1;
    string link = 2;
  }
  Advisory advisory = 24;
  float cvss = 2;
  string summary = 3;
  string link = 4;
  oneof set_fixed_by {
    string fixed_by = 5;
  }
  ScoreVersion score_version = 8;
  // CVSSV2 CVSSV3 can be deprecated ROX-26066
  CVSSV2 cvss_v2 = 6;
  CVSSV3 cvss_v3 = 7;
  google.protobuf.Timestamp published_on = 9;
  google.protobuf.Timestamp last_modified = 10;
  // For internal purposes only.
  VulnerabilityType vulnerability_type = 11;
  repeated VulnerabilityType vulnerability_types = 18; // @gotags: hash:"ignore"
  bool suppressed = 12; // @gotags: hash:"ignore"
  google.protobuf.Timestamp suppress_activation = 13; // @gotags: hash:"ignore"
  google.protobuf.Timestamp suppress_expiry = 14; // @gotags: hash:"ignore"
  // Time when the CVE was first seen, for this specific distro, in the system.
  google.protobuf.Timestamp first_system_occurrence = 15; // @gotags: hash:"ignore"
  // Time when the CVE was first seen in this image.
  google.protobuf.Timestamp first_image_occurrence = 16; // @gotags: hash:"ignore"
  // This was first_node_occurrence
  reserved 17;

  VulnerabilitySeverity severity = 19;
  VulnerabilityState state = 20; // @gotags: hash:"ignore"
  // cvss_metrics stores list of cvss scores from different sources like nvd, Redhat etc
  repeated CVSSScore cvss_metrics = 21;
  float nvd_cvss = 22;
  message EPSS {
    float epss_probability = 1;
    float epss_percentile = 2;
  }
  EPSS epss = 23;
}
